RESOLVED FIXED 249001
QualifiedResourceHeap doesn't need to implement DisplayList::ResourceHeap
https://bugs.webkit.org/show_bug.cgi?id=249001
Summary QualifiedResourceHeap doesn't need to implement DisplayList::ResourceHeap
Matt Woodrow
Reported 2022-12-08 17:56:26 PST
We never actually use any of the base class functions.
Attachments
Matt Woodrow
Comment 1 2022-12-08 17:57:38 PST
EWS
Comment 2 2022-12-10 17:23:23 PST
Committed 257693@main (d8c8e323ec24): <https://commits.webkit.org/257693@main> Reviewed commits have been landed. Closing PR #7371 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-12-10 17:24:16 PST
Note You need to log in before you can comment on or make changes to this bug.