Don't implement DisplayList::ResourceHeap in QualifiedResourceHeap. https://bugs.webkit.org/show_bug.cgi?id=249001

Reviewed by Simon Fraser.

None of the base class gets used, so we might as well skip it.

* Source/WebKit/GPUProcess/graphics/QualifiedResourceHeap.h:
(WebKit::QualifiedResourceHeap::add):
(WebKit::QualifiedResourceHeap::getImageBuffer const):
(WebKit::QualifiedResourceHeap::removeImageBuffer):
(WebKit::QualifiedResourceHeap::checkInvariants const):
* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::transferImageBuffer):

Canonical link: https://commits.webkit.org/257693@main